Menu is not scrolling on mobile issue fix

--- a/packages/client-core/src/user/components/UserMenu/UserMenu.module.scss
+++ b/packages/client-core/src/user/components/UserMenu/UserMenu.module.scss
@@ -350,6 +350,9 @@
     color: black;
     max-height: calc(100vh - 175px);
     overflow: auto;
+    touch-action: auto;
+
+    * { touch-action: auto; }
 
     &>.profilePanel, &>.accountPanel, &>.settingPanel, &>.sharePanel, &>.locationPanel { margin: 30px 0; }
 
